[ios] Merge BVC's |browserStateDestroyed| and |shutdown|

|BrowserStateDestroyed| and |shutdown| are only ever called together,
so this CL merges their implementation and removes the public API for
|BrowserStateDestroyed|. The has the benefit of being able to bookkeep
that shutdown is happening (|_isShutdown|) at the beginning of
|BrowserStateDestroyed|.

This CL also prevents a crash when BVC reloads WebState during cookie
clearing on shutdown. The change above allows for preventing WebState
reloads if shutdown is happening.

Bug: 913709
Change-Id: I0ea3f8a60c4962849198f669d9e5b0e70e8ba979
Reviewed-on: https://chromium-review.googlesource.com/c/1388804
Commit-Queue: edchin <edchin@chromium.org>
Reviewed-by: Mark Cogan <marq@chromium.org>
Reviewed-by: Kurt Horimoto <kkhorimoto@chromium.org>
Reviewed-by: edchin <edchin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#619036}