ios/chrome/browser/ui/main/browser_coordinator.mm
@@ -196,7 +196,6 @@
 
 // Shuts down the BrowserViewController.
 - (void)destroyViewController {
-  [self.viewController browserStateDestroyed];
   [self.viewController shutdown];
   _viewController = nil;
 }
