ios/chrome/browser/ui/main/browser_view_wrangler.mm
@@ -369,17 +369,17 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
   breakpad::StopMonitoringTabStateForTabModel(_mainTabModel);
   breakpad::StopMonitoringTabStateForTabModel(_otrTabModel);
 
-  // Normally other objects will take care of unhooking the tab models from
-  // the browser state, but this code should ensure that it happens regardless.
-  [_mainTabModel browserStateDestroyed];
-  [_otrTabModel browserStateDestroyed];
-
   // At this stage, new BrowserCoordinators shouldn't be lazily constructed by
   // calling their property getters.
   [_mainBrowserCoordinator stop];
   _mainBrowserCoordinator = nil;
   [_incognitoBrowserCoordinator stop];
   _incognitoBrowserCoordinator = nil;
+
+  // Normally other objects will take care of unhooking the tab models from
+  // the browser state, but this code should ensure that it happens regardless.
+  [_mainTabModel browserStateDestroyed];
+  [_otrTabModel browserStateDestroyed];
 
   _browserState = nullptr;
 }
